Multiple Hair Systems Not visible while in particle edit mode. #61770

Closed
opened 2019-02-21 01:26:08 +01:00 by Troy Bowen · 7 comments

System Information
Operating system: Windows 10 Pro
Graphics card: 2x GTX 1080TI's (Not in SLI)

Blender Version
Broken: 2.80 February, 19th 2019
Worked: 2.79b Stable Release

Short description of error
All hair particle systems (except active selection) disappear or are hidden when multiple hair particle systems are created on one mesh and the user enters particle edit mode.

Exact steps for others to reproduce the error

  1. Using a standard UV sphere add a particle system, and switch it to hair.

  2. Add another particle system to the same mesh, change seed to see both hair systems.

  3. Enter edit mode for either particle system and the other will disappear until re entering object mode. However it will disappear again upon entering particle edit mode.

In 2.79b Users could see all active hair systems while in edit mode (Unless hidden in the particle tab) to allow for hair style grooming to see if different hair systems were colliding or passing through each other. This helped create a cohesive hair style without having to switch in and out of object mode and guessing where the other systems were.

Thanks for everything!

**System Information** Operating system: Windows 10 Pro Graphics card: 2x GTX 1080TI's (Not in SLI) **Blender Version** Broken: 2.80 February, 19th 2019 Worked: 2.79b Stable Release **Short description of error** All hair particle systems (except active selection) disappear or are hidden when multiple hair particle systems are created on one mesh and the user enters particle edit mode. **Exact steps for others to reproduce the error** 1. Using a standard UV sphere add a particle system, and switch it to hair. 2. Add another particle system to the same mesh, change seed to see both hair systems. 3. Enter edit mode for either particle system and the other will disappear until re entering object mode. However it will disappear again upon entering particle edit mode. In 2.79b Users could see all active hair systems while in edit mode (Unless hidden in the particle tab) to allow for hair style grooming to see if different hair systems were colliding or passing through each other. This helped create a cohesive hair style without having to switch in and out of object mode and guessing where the other systems were. Thanks for everything!
Author

Added subscriber: @TroyBoy

Added subscriber: @TroyBoy
Sebastian Parborg self-assigned this 2019-02-21 16:05:24 +01:00

Added subscriber: @you.le

Added subscriber: @you.le

I add test files here:

2.79:

2ParticlesSystemsEditMode2.79.blend

2.8:

2ParticlesSystemsEditMode.blend

in particle edit mode:

2.79: Both particle systems are visibled
2.8: Only the selected particle system is visibled

I add test files here: 2.79: [2ParticlesSystemsEditMode2.79.blend](https://archive.blender.org/developer/F6879618/2ParticlesSystemsEditMode2.79.blend) 2.8: [2ParticlesSystemsEditMode.blend](https://archive.blender.org/developer/F6879620/2ParticlesSystemsEditMode.blend) in particle edit mode: 2.79: Both particle systems are visibled 2.8: Only the selected particle system is visibled

I add a .diff between the 2 particle edit.c too if it can be useful:

https://www.diffchecker.com/wUQsL7WY

(I like diffchecker website btw, if someone is interested)

left: 2.8
right: 2.7

I add a .diff between the 2 particle edit.c too if it can be useful: https://www.diffchecker.com/wUQsL7WY (I like diffchecker website btw, if someone is interested) left: 2.8 right: 2.7
Sebastian Parborg removed their assignment 2019-06-24 18:17:48 +02:00
Clément Foucault was assigned by Sebastian Parborg 2019-06-24 18:17:48 +02:00

Added subscriber: @ZedDB

Added subscriber: @ZedDB

This issue was referenced by 526876a634

This issue was referenced by 526876a6348f63f634c8357b2949cf208d688321

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61770
No description provided.