Fix T61770 Multiple Hair Systems Not visible while in particle edit mode

The check was for the whole object instead of individual particle system.